--- a/src/style.css
+++ b/src/style.css
@@ -7,49 +7,41 @@
 /* FONTS */
 @font-face {
   font-family: "Suisse Works";
-  src: url("src/SuisseWorks-Regular-WebXL.woff2") format("woff2"),
-       url("src/SuisseWorks-Regular-WebXL.woff") format("woff");
+  src: url("fonts//SuisseWorks-Regular-WebXL.woff2") format("woff2"),
+       url("fonts//SuisseWorks-Regular-WebXL.woff") format("woff");
   font-style: normal;
 }
 
 @font-face {
   font-family: "Suisse Works";
-  src: url("src/SuisseWorks-RegularItalic-WebXL.woff2") format("woff2"),
-       url("src/SuisseWorks-RegularItalic-WebXL.woff") format("woff");
+  src: url("fonts//SuisseWorks-RegularItalic-WebXL.woff2") format("woff2"),
+       url("fonts//SuisseWorks-RegularItalic-WebXL.woff") format("woff");
   font-style: italic;
 }
 
 @font-face {
   font-family: "Suisse Int'l";
-  src: url("src/SuisseIntl-Regular-WebM.woff2") format("woff2"),
-       url("src/SuisseIntl-Regular-WebM.woff") format("woff");
+  src: url("fonts//SuisseIntl-Regular-WebM.woff2") format("woff2"),
+       url("fonts//SuisseIntl-Regular-WebM.woff") format("woff");
   font-style: normal;
 }
 
 @font-face {
   font-family: "Suisse Int'l";
-  src: url("src/SuisseIntl-RegularItalic-WebM.woff2") format("woff2"),
-       url("src/SuisseIntl-RegularItalic-WebM.woff") format("woff");
+  src: url("fonts//SuisseIntl-RegularItalic-WebM.woff2") format("woff2"),
+       url("fonts//SuisseIntl-RegularItalic-WebM.woff") format("woff");
   font-style: italic;
 }
 
 @font-face {
   font-family: "Suisse Mono";
-  src: url("src/SuisseIntlMono-Regular-WebS.woff2") format("woff2"),
-       url("src/SuisseIntlMono-Regular-WebS.woff") format("woff");
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Suisse Mono";
-  src: url("SuisseIntlMono-Bold-WebS.woff2") format("woff2"),
-       url("src/SuisseIntlMono-Bold-WebS.woff") format("woff");
+  src: url("fonts//SuisseIntlMono-Bold-WebS.woff2") format("woff2"),
+       url("fonts//SuisseIntlMono-Bold-WebS.woff") format("woff");
   font-style: bold;
 }
 
 /* SECTIONS */
 body {
-  background-color: black;
   font-family: "Suisse Works", serif;
 }
 
@@ -66,6 +58,25 @@ hr {
 	border:none;
   color: black;
   background: black;
+}
+
+a {
+  font-family: "Suisse Int'l", sans-serif;
+  color: black;
+  cursor: ne-resize;
+}
+
+.similar {
+  background-color: black;
+  color: white;
+  border-radius: 500px;
+  padding: 0 0.5em;
+  cursor: pointer;
+}
+
+.similar:hover {
+  background-color: gray;
+  color: black;
 }
 
 .title {
@@ -90,7 +101,7 @@ hr {
 #intro h1 {
   font-size: 10vw;
   line-height: 0.9;
-  letter-spacing: -0.3rem;
+  letter-spacing: -0.05em;
 }
 
 #intro p {
@@ -128,13 +139,20 @@ hr {
 
 .medium {
   width: 20%;
+  min-width: 12%;
   height: calc(100vh - 2em);
-  padding: 1em;
-  overflow-y: scroll;
+  overflow: hidden;
   background-color: #e0e0e0;
+  position: relative;
 }
 
-#codex, #website {
+.medium-title {
+  border: 1px solid black;
+  border-radius: 500px;
+  padding-left: 0.3em;
+}
+
+#scroll, #webpage, #feed {
   background-color: white;
 }
 
@@ -158,7 +176,6 @@ hr {
 
 .handle {
   width: 0.5em;
-  height: 100vh;
   background-color: black;
   color: white;
   cursor: col-resize;
@@ -166,6 +183,7 @@ hr {
   justify-content: center;
   align-items: center;
   user-select: none;
+  z-index: 10;
 }
 
 table {
@@ -193,7 +211,63 @@ h1 {
   font-weight: normal;
 }
 
+#scroll-mask {
+  width: inherit;
+  height: 100px;
+  position: fixed;
+  background-color: red;
+}
+
 ::selection {
   background-color: rgba(0, 0, 0, 0.99);
   color: white;
+}
+
+#no-mobile {
+  height: 100vh;
+  width: 100vw;
+  background-color: black;
+  position: fixed;
+  top: 0;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  display: none;
+}
+
+#no-mobile p {
+  text-align: center;
+  color: white;
+  font-size: 1.5em;
+}
+
+iframe {
+  width: 100%;
+  height: calc(100vh - 2em);
+  border: none;
+}
+
+/* @media only screen and (max-width: 1300px) {
+  p {
+    font-size: 0.8em;
+  }
+
+  .caption, table {
+    font-size: 0.5em;
+  }
+
+  #intro p, h1 {
+    font-size: 1.5em;
+  }
+
+  .title {
+    font-size: 1em;
+  }
+} */
+
+@media only screen and (max-width: 1000px) {
+  #no-mobile {
+    display: flex;
+  }
 }
