--- a/src/style.css
+++ b/src/style.css
@@ -84,7 +84,6 @@ a {
   font-size: 1.3em;
   margin-bottom: 1rem;
   padding-top: 1rem;
-  border-top: 2px solid black;
 }
 
 #intro {
@@ -161,7 +160,44 @@ a {
 }
 
 .medium-article {
+  overflow-y: scroll;
+  scrollbar-width: thin;
   text-indent: 2rem;
+  position: relative;
+  border-top: 2px solid black;
+  max-height: 60vh;
+}
+
+.top-gradient-container {
+  position: sticky;
+  top: 0;
+  pointer-events: none;
+}
+
+.top-gradient {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 0;
+  background: linear-gradient(180deg, #e0e0e0 0%, rgba(255,255,255,0) 100%);
+}
+
+.bottom-gradient-container {
+  position: sticky;
+  bottom: 0;
+  pointer-events: none;
+}
+
+.bottom-gradient {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 0;
+  background: linear-gradient(0, #e0e0e0 0%, rgba(255,255,255,0) 100%);
+}
+
+#scroll, #webpage, #feed .top-gradient {
+  background: linear-gradient(180deg, #fff 0%, rgba(255,255,255,0) 100%);
 }
 
 .caption {
@@ -245,7 +281,6 @@ iframe {
   width: 100%;
   height: 100%;
   border: none;
-  /* pointer-events: none; */
 }
 
 @media only screen and (max-width: 300px) {
