--- a/src/style.css
+++ b/src/style.css
@@ -105,6 +105,12 @@ a:hover {
   display: flex;
 }
 
+.subpage {
+  padding: 1em;
+  margin-bottom: 1em;
+  overflow-y: hidden;
+}
+
 .medium {
   width: 20%;
   min-width: 15%;
@@ -115,7 +121,7 @@ a:hover {
 }
 
 .medium-info {
-  height: 30vh;
+  height: 35vh;
 }
 
 .medium-title {
@@ -135,15 +141,11 @@ a:hover {
 
 .medium-article {
   overflow-y: scroll;
-  scrollbar-width: thin;
   text-indent: 2rem;
   position: relative;
   border-top: 2px solid black;
-  max-height: 70vh;
-}
-
-.article-container *:nth-last-child(2) {
-  margin-bottom: 2em;
+  max-height: calc(65vh - 2em);
+  padding-bottom: 1em;
 }
 
 .top-gradient-container {
@@ -162,13 +164,13 @@ a:hover {
 
 .bottom-gradient-container {
   position: sticky;
-  bottom: 0;
+  bottom: -1em;
   pointer-events: none;
 }
 
 .bottom-gradient {
   position: absolute;
-  bottom: 0;
+  bottom: -1em;
   width: 100%;
   height: 250px;
   background: linear-gradient(0, #fff 0%, rgba(255,255,255,0) 100%);
@@ -209,8 +211,26 @@ td:last-child {
   color: grey;
 }
 
-#example td {
+tr:last-child td {
   padding-top: 1em;
+}
+
+.example {
+  text-decoration: underline;
+  cursor: default;
+}
+
+.image-element {
+  display: none;
+  position: absolute;
+  pointer-events: none;
+  z-index: 10;
+  width: calc(100% - 2em);
+  left: 1em;
+}
+
+.visible {
+  display: block;
 }
 
 table td, table td * {
@@ -219,13 +239,6 @@ table td, table td * {
 
 h1 {
   font-weight: normal;
-}
-
-#scroll-mask {
-  width: inherit;
-  height: 100px;
-  position: fixed;
-  background-color: red;
 }
 
 ::selection {
@@ -276,7 +289,16 @@ iframe {
   }
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (min-width: 500px) {
+  p {
+    font-size: 1.2em;
+  }
+  .article-title {
+    font-size: 2em;
+  }
+}
+
+@media only screen and (max-width: 1000px), (max-height: 800px){
   #no-mobile {
     display: flex;
   }
